welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:9: error: not found: value Direction
  		if((estFaceMur()) && (getDirection()==Direction.EST)){
                                                      ^ZigZag:15: error: not found: value Direction
  		if((estFaceMur()) && (getDirection()==Direction.OUEST)){
                                                      ^